Fix alignment of debug "edit" links

--- a/src/ItemSidebar.module.css
+++ b/src/ItemSidebar.module.css
@@ -126,6 +126,10 @@
     margin-bottom: 1rem;
 }
 
+.ItemMeta > div {
+    margin-bottom: 0.25rem;
+}
+
 .ItemTag {
     display: inline-block;
     background-color: #3E885B;
