--- a/src/Ledger.module.css
+++ b/src/Ledger.module.css
@@ -46,6 +46,7 @@
     font-size: 1rem;
     margin-left: 0.25rem;
     font-weight: 400;
+    color: #ccc;
 }
 
 .LedgerRow {
